Create function for finding image center of mass

--- a/notebooks/01_eaf_Set-up-project-scope.ipynb
+++ b/notebooks/01_eaf_Set-up-project-scope.ipynb
@@ -58,7 +58,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_center(pil_image):\n",
+    "    '''This function finds the center of mass for a user provided image,\n",
+    "       and returns the pixels in the x and y directions that\n",
+    "       have been adjusted for aida counts that are always even.\n",
+    "       Used the answer provided by https://stackoverflow.com/users/5288583/martin-stancsics at\n",
+    "       https://stackoverflow.com/questions/37519238/python-find-center-of-object-in-an-image\n",
+    "       to develop the center of mass equations\n",
+    "       '''\n",
+    "    \n",
+    "    # get original size\n",
+    "    (X, Y) = pil_image.size\n",
+    "    m = np.zeros((X, Y))\n",
+    "\n",
+    "    # account for white vs non-white\n",
+    "    m = np.sum(np.asarray(pil_image), -1) < 255*3\n",
+    "    m = m / np.sum(np.sum(m))\n",
+    "\n",
+    "    # marginal distributions\n",
+    "    dx = np.sum(m, 0)\n",
+    "    dy = np.sum(m, 1)\n",
+    "\n",
+    "    # expected values\n",
+    "    cx = np.sum(dx * np.arange(X))\n",
+    "    cy = np.sum(dy * np.arange(Y))\n",
+    "\n",
+    "    # ensure that each returned expected value \n",
+    "    # will result in an even number \n",
+    "    # for aida thread count standards\n",
+    "    if round(cx)%2 != 0:\n",
+    "        adj_cx = round(cx) + 1\n",
+    "    else:\n",
+    "        adj_cx = round(cx)\n",
+    "    if round(cy)%2 != 0:\n",
+    "        adj_cy = round(cy) + 1\n",
+    "    else:\n",
+    "        adj_cy = round(cy)\n",
+    "    \n",
+    "    return adj_cx, adj_cy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -67,41 +113,14 @@
        "(572, 582)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#https://stackoverflow.com/questions/37519238/python-find-center-of-object-in-an-image\n",
-    "\n",
-    "# get original size\n",
-    "(X, Y) = msge_im.size\n",
-    "m = np.zeros((X, Y))\n",
-    "\n",
-    "# account for white vs non-white\n",
-    "m = np.sum(np.asarray(msge_im), -1) < 255*3\n",
-    "m = m / np.sum(np.sum(m))\n",
-    "\n",
-    "# marginal distributions\n",
-    "dx = np.sum(m, 0)\n",
-    "dy = np.sum(m, 1)\n",
-    "\n",
-    "# expected values\n",
-    "cx = np.sum(dx * np.arange(X))\n",
-    "cy = np.sum(dy * np.arange(Y))\n",
-    "\n",
-    "# ensure that each returned expected value \n",
-    "# will result in an even thread count\n",
-    "if round(cx)%2 != 0:\n",
-    "    adj_cx = round(cx) + 1\n",
-    "else:\n",
-    "    adj_cx = round(cx)\n",
-    "if round(cy)%2 != 0:\n",
-    "    adj_cy = round(cy) + 1\n",
-    "else:\n",
-    "    adj_cy = round(cy)\n",
-    "adj_cx, adj_cy"
+    "x_center, y_center = find_center(msge_im)\n",
+    "x_center, y_center"
    ]
   },
   {
