Update common hoop sizes

--- a/references/2022.04.13-Interview_for_App_Specs.md
+++ b/references/2022.04.13-Interview_for_App_Specs.md
@@ -23,5 +23,5 @@ Other ideas
 General cross stitching ideas
 - 14 stitches per inch is 14 ada fabric
 - The number of stitches will determine the size of the project
-- Reduce the number of stitches pby 2-3 stitches per side to accommodate hoop sizes
-- Hoop sizes might include 3, 4, 6, 8, 10, 12
+- Reduce the number of stitches by 2-3 stitches per side to accommodate hoop sizes
+- Hoop sizes might include 3, 4, 5, 6, 7, 8, 9, 10, 12, 14
