Add in discussion about colors and color matching

--- a/references/2022.04.13-Interview_for_App_Specs.md
+++ b/references/2022.04.13-Interview_for_App_Specs.md
@@ -19,6 +19,9 @@ Other ideas
 - Include feedback system of good/bad for each pattern to do machine learning in the future
 - Email patterns to the end user
 - Include a statement about how to produce better quality patterns
+- Colors included in the project should be allowed to vary from very few (around five) to many (being around 30)
+  - Maybe on a sliding scale?
+- Cross stictchers often have to color match based on what colors of thread they have in their inventory
   
 General cross stitching ideas
 - 14 stitches per inch is 14 ada fabric
