Add function to convert from rbg values to hexadecimal values

--- a/notebooks/02_eaf_Color_library.ipynb
+++ b/notebooks/02_eaf_Color_library.ipynb
@@ -164,6 +164,226 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2071"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_colors = len(set(msge_hex_data))\n",
+    "max_colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38 % of the image is not white\n"
+     ]
+    }
+   ],
+   "source": [
+    "not_white = []\n",
+    "for x in msge_hex_data:\n",
+    "    if x != '#ffffff':\n",
+    "        not_white.append(x)\n",
+    "print(round((len(not_white) / len(msge_hex_data) * 100)), '% of the image is not white')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DECIMAL\t0\t1\t2\t3\t4\t5\t6\t7\t8\t9\t10\t11\t12\t13\t14\t15\n",
+    "Hexadecimal\t0\t1\t2\t3\t4\t5\t6\t7\t8\t9\tA\tB\tC\tD\tE\tF\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15, 15)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import floor\n",
+    "floor(msge_color_data[0][0] / 16), msge_color_data[0][0] % 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hexadecimal = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'A', 'B', 'C', 'D', 'E', 'F']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('F', 'F')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hexadecimal[floor(msge_color_data[0][0] / 16)], hexadecimal[msge_color_data[0][0] % 16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rgb_to_hex(color_list):\n",
+    "    '''This function will take in the RGB value of a color and return the hexadecimal value.\n",
+    "       Developed using information from: \n",
+    "       https://www.developintelligence.com/blog/2017/02/rgb-to-hex-understanding-the-major-web-color-codes/'''\n",
+    "    \n",
+    "    hexadecimal = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 'A', 'B', 'C', 'D', 'E', 'F']\n",
+    "    values = []\n",
+    "    for color in color_list:   \n",
+    "        values.append(str(hexadecimal[floor(color / 16)]))\n",
+    "        values.append(str(hexadecimal[color % 16]))\n",
+    "    hex_values = ''.join(values)\n",
+    "    return hex_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF',\n",
+       " 'FFFFFF']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hex_data = []\n",
+    "for color_data in msge_color_data:\n",
+    "    hex_data.append(rgb_to_hex(color_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FFFFFF',\n",
+       " 'FDFDFD',\n",
+       " 'FFFFFF',\n",
+       " 'EEEEEE',\n",
+       " '101010',\n",
+       " '000000',\n",
+       " '010101',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000',\n",
+       " '000000']"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hex_data[75200:75220]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1405200, 1405200)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(hex_data), len(msge_color_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
