Add unicode data

--- a/notebooks/02_eaf_Color_library.ipynb
+++ b/notebooks/02_eaf_Color_library.ipynb
@@ -55,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get RGB Color Data from Image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -121,87 +128,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# inspired by http://stackoverflow.com/a/19917486\n",
-    "def rgb2hex(r, g, b):\n",
-    "    return '#{:02x}{:02x}{:02x}'.format(r, g, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msge_hex_data = []\n",
-    "for r, g, b in msge_color_data:\n",
-    "    msge_hex_data.append(rgb2hex(r, g, b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1405200, 1405200)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(msge_color_data), len(msge_hex_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2071"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max_colors = len(set(msge_hex_data))\n",
-    "max_colors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "38 % of the image is not white\n"
-     ]
-    }
-   ],
-   "source": [
-    "not_white = []\n",
-    "for x in msge_hex_data:\n",
-    "    if x != '#ffffff':\n",
-    "        not_white.append(x)\n",
-    "print(round((len(not_white) / len(msge_hex_data) * 100)), '% of the image is not white')"
+    "# Convert RGB Color Data to Hexadecimal Color Data"
    ]
   },
   {
@@ -209,7 +139,7 @@
    "metadata": {},
    "source": [
     "DECIMAL\t0\t1\t2\t3\t4\t5\t6\t7\t8\t9\t10\t11\t12\t13\t14\t15\n",
-    "Hexadecimal\t0\t1\t2\t3\t4\t5\t6\t7\t8\t9\tA\tB\tC\tD\tE\tF\n"
+    "Hexadecimal\t0\t1\t2\t3\t4\t5\t6\t7\t8\t9\tA\tB\tC\tD\tE\tF"
    ]
   },
   {
@@ -380,6 +310,643 @@
    ],
    "source": [
     "len(hex_data), len(msge_color_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2071"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_colors = len(set(hex_data))\n",
+    "max_colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38 % of the image is not white\n"
+     ]
+    }
+   ],
+   "source": [
+    "not_white = []\n",
+    "for x in hex_data:\n",
+    "    if x != 'FFFFFF':\n",
+    "        not_white.append(x)\n",
+    "print(round((len(not_white) / len(msge_hex_data) * 100)), '% of the image is not white')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'⬀'"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'\\u2B00'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2B00',\n",
+       " '2B01',\n",
+       " '2B02',\n",
+       " '2B03',\n",
+       " '2B04',\n",
+       " '2B05',\n",
+       " '2B06',\n",
+       " '2B07',\n",
+       " '2B08',\n",
+       " '2B09',\n",
+       " '2B0A',\n",
+       " '2B0B',\n",
+       " '2B0C',\n",
+       " '2B0D',\n",
+       " '2B0E',\n",
+       " '2B0F',\n",
+       " '2B10',\n",
+       " '2B11',\n",
+       " '2B12',\n",
+       " '2B13',\n",
+       " '2B14',\n",
+       " '2B15',\n",
+       " '2B16',\n",
+       " '2B17',\n",
+       " '2B18',\n",
+       " '2B19',\n",
+       " '2B1A',\n",
+       " '2B1B',\n",
+       " '2B1C',\n",
+       " '2B1D',\n",
+       " '2B1E',\n",
+       " '2B1F',\n",
+       " '2B20',\n",
+       " '2B21',\n",
+       " '2B22',\n",
+       " '2B23',\n",
+       " '2B24',\n",
+       " '2B25',\n",
+       " '2B26',\n",
+       " '2B27',\n",
+       " '2B28',\n",
+       " '2B29',\n",
+       " '2B2A',\n",
+       " '2B2B',\n",
+       " '2B2C',\n",
+       " '2B2D',\n",
+       " '2B2E',\n",
+       " '2B2F',\n",
+       " '2B30',\n",
+       " '2B31',\n",
+       " '2B32',\n",
+       " '2B33',\n",
+       " '2B34',\n",
+       " '2B35',\n",
+       " '2B36',\n",
+       " '2B37',\n",
+       " '2B38',\n",
+       " '2B39',\n",
+       " '2B3A',\n",
+       " '2B3B',\n",
+       " '2B3C',\n",
+       " '2B3D',\n",
+       " '2B3E',\n",
+       " '2B3F',\n",
+       " '2B40',\n",
+       " '2B41',\n",
+       " '2B42',\n",
+       " '2B43',\n",
+       " '2B44',\n",
+       " '2B45',\n",
+       " '2B46',\n",
+       " '2B47',\n",
+       " '2B48',\n",
+       " '2B49',\n",
+       " '2B4A',\n",
+       " '2B4B',\n",
+       " '2B4C',\n",
+       " '2B4D',\n",
+       " '2B4E',\n",
+       " '2B4F',\n",
+       " '2B50',\n",
+       " '2B51',\n",
+       " '2B52',\n",
+       " '2B53',\n",
+       " '2B54',\n",
+       " '2B55',\n",
+       " '2B56',\n",
+       " '2B57',\n",
+       " '2B58',\n",
+       " '2B59',\n",
+       " '2B5A',\n",
+       " '2B5B',\n",
+       " '2B5C',\n",
+       " '2B5D',\n",
+       " '2B5E',\n",
+       " '2B5F',\n",
+       " '2B60',\n",
+       " '2B61',\n",
+       " '2B62',\n",
+       " '2B63',\n",
+       " '2B64',\n",
+       " '2B65',\n",
+       " '2B66',\n",
+       " '2B67',\n",
+       " '2B68',\n",
+       " '2B69',\n",
+       " '2B6A',\n",
+       " '2B6B',\n",
+       " '2B6C',\n",
+       " '2B6D',\n",
+       " '2B6E',\n",
+       " '2B6F',\n",
+       " '2B70',\n",
+       " '2B71',\n",
+       " '2B72',\n",
+       " '2B73',\n",
+       " '2B74',\n",
+       " '2B75',\n",
+       " '2B76',\n",
+       " '2B77',\n",
+       " '2B78',\n",
+       " '2B79',\n",
+       " '2B7A',\n",
+       " '2B7B',\n",
+       " '2B7C',\n",
+       " '2B7D',\n",
+       " '2B7E',\n",
+       " '2B7F',\n",
+       " '2B80',\n",
+       " '2B81',\n",
+       " '2B82',\n",
+       " '2B83',\n",
+       " '2B84',\n",
+       " '2B85',\n",
+       " '2B86',\n",
+       " '2B87',\n",
+       " '2B88',\n",
+       " '2B89',\n",
+       " '2B8A',\n",
+       " '2B8B',\n",
+       " '2B8C',\n",
+       " '2B8D',\n",
+       " '2B8E',\n",
+       " '2B8F',\n",
+       " '2B90',\n",
+       " '2B91',\n",
+       " '2B92',\n",
+       " '2B93',\n",
+       " '2B94',\n",
+       " '2B95',\n",
+       " '2B96',\n",
+       " '2B97',\n",
+       " '2B98',\n",
+       " '2B99',\n",
+       " '2B9A',\n",
+       " '2B9B',\n",
+       " '2B9C',\n",
+       " '2B9D',\n",
+       " '2B9E',\n",
+       " '2B9F',\n",
+       " '2BA0',\n",
+       " '2BA1',\n",
+       " '2BA2',\n",
+       " '2BA3',\n",
+       " '2BA4',\n",
+       " '2BA5',\n",
+       " '2BA6',\n",
+       " '2BA7',\n",
+       " '2BA8',\n",
+       " '2BA9',\n",
+       " '2BAA',\n",
+       " '2BAB',\n",
+       " '2BAC',\n",
+       " '2BAD',\n",
+       " '2BAE',\n",
+       " '2BAF',\n",
+       " '2BB0',\n",
+       " '2BB1',\n",
+       " '2BB2',\n",
+       " '2BB3',\n",
+       " '2BB4',\n",
+       " '2BB5',\n",
+       " '2BB6',\n",
+       " '2BB7',\n",
+       " '2BB8',\n",
+       " '2BB9',\n",
+       " '2BBA',\n",
+       " '2BBB',\n",
+       " '2BBC',\n",
+       " '2BBD',\n",
+       " '2BBE',\n",
+       " '2BBF',\n",
+       " '2BC0',\n",
+       " '2BC1',\n",
+       " '2BC2',\n",
+       " '2BC3',\n",
+       " '2BC4',\n",
+       " '2BC5',\n",
+       " '2BC6',\n",
+       " '2BC7',\n",
+       " '2BC8',\n",
+       " '2BC9',\n",
+       " '2BCA',\n",
+       " '2BCB',\n",
+       " '2BCC',\n",
+       " '2BCD',\n",
+       " '2BCE',\n",
+       " '2BCF',\n",
+       " '2BD0',\n",
+       " '2BD1',\n",
+       " '2BD2',\n",
+       " '2BD3',\n",
+       " '2BD4',\n",
+       " '2BD5',\n",
+       " '2BD6',\n",
+       " '2BD7',\n",
+       " '2BD8',\n",
+       " '2BD9',\n",
+       " '2BDA',\n",
+       " '2BDB',\n",
+       " '2BDC',\n",
+       " '2BDD',\n",
+       " '2BDE',\n",
+       " '2BDF',\n",
+       " '2BE0',\n",
+       " '2BE1',\n",
+       " '2BE2',\n",
+       " '2BE3',\n",
+       " '2BE4',\n",
+       " '2BE5',\n",
+       " '2BE6',\n",
+       " '2BE7',\n",
+       " '2BE8',\n",
+       " '2BE9',\n",
+       " '2BEA',\n",
+       " '2BEB',\n",
+       " '2BEC',\n",
+       " '2BED',\n",
+       " '2BEE',\n",
+       " '2BEF',\n",
+       " '2BF0',\n",
+       " '2BF1',\n",
+       " '2BF2',\n",
+       " '2BF3',\n",
+       " '2BF4',\n",
+       " '2BF5',\n",
+       " '2BF6',\n",
+       " '2BF7',\n",
+       " '2BF8',\n",
+       " '2BF9',\n",
+       " '2BFA',\n",
+       " '2BFB',\n",
+       " '2BFC',\n",
+       " '2BFD',\n",
+       " '2BFE',\n",
+       " '2BFF']"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hexadecimal = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'A', 'B', 'C', 'D', 'E', 'F']\n",
+    "unicode_hex = ['2B0', '2B1', '2B2', '2B3', '2B4', '2B5', '2B6', '2B7', '2B8', '2B9', '2BA', \n",
+    "               '2BB', '2BC', '2BD', '2BE', '2BF']\n",
+    "unicode_data = []\n",
+    "for uni in unicode_hex:\n",
+    "    for hexa in hexadecimal:\n",
+    "        unicode_data.append(''.join(uni + hexa))\n",
+    "unicode_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\u2B0F'"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R'\\u' + unicode_data[15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⬀\n",
+      "⬁\n",
+      "⬂\n",
+      "⬃\n",
+      "⬄\n",
+      "⬅\n",
+      "⬆\n",
+      "⬇\n",
+      "⬈\n",
+      "⬉\n",
+      "⬊\n",
+      "⬋\n",
+      "⬌\n",
+      "⬍\n",
+      "⬎\n",
+      "⬏\n",
+      "⬐\n",
+      "⬑\n",
+      "⬒\n",
+      "⬓\n",
+      "⬔\n",
+      "⬕\n",
+      "⬖\n",
+      "⬗\n",
+      "⬘\n",
+      "⬙\n",
+      "⬚\n",
+      "⬛\n",
+      "⬜\n",
+      "⬝\n",
+      "⬞\n",
+      "⬟\n",
+      "⬠\n",
+      "⬡\n",
+      "⬢\n",
+      "⬣\n",
+      "⬤\n",
+      "⬥\n",
+      "⬦\n",
+      "⬧\n",
+      "⬨\n",
+      "⬩\n",
+      "⬪\n",
+      "⬫\n",
+      "⬬\n",
+      "⬭\n",
+      "⬮\n",
+      "⬯\n",
+      "⬰\n",
+      "⬱\n",
+      "⬲\n",
+      "⬳\n",
+      "⬴\n",
+      "⬵\n",
+      "⬶\n",
+      "⬷\n",
+      "⬸\n",
+      "⬹\n",
+      "⬺\n",
+      "⬻\n",
+      "⬼\n",
+      "⬽\n",
+      "⬾\n",
+      "⬿\n",
+      "⭀\n",
+      "⭁\n",
+      "⭂\n",
+      "⭃\n",
+      "⭄\n",
+      "⭅\n",
+      "⭆\n",
+      "⭇\n",
+      "⭈\n",
+      "⭉\n",
+      "⭊\n",
+      "⭋\n",
+      "⭌\n",
+      "⭍\n",
+      "⭎\n",
+      "⭏\n",
+      "⭐\n",
+      "⭑\n",
+      "⭒\n",
+      "⭓\n",
+      "⭔\n",
+      "⭕\n",
+      "⭖\n",
+      "⭗\n",
+      "⭘\n",
+      "⭙\n",
+      "⭚\n",
+      "⭛\n",
+      "⭜\n",
+      "⭝\n",
+      "⭞\n",
+      "⭟\n",
+      "⭠\n",
+      "⭡\n",
+      "⭢\n",
+      "⭣\n",
+      "⭤\n",
+      "⭥\n",
+      "⭦\n",
+      "⭧\n",
+      "⭨\n",
+      "⭩\n",
+      "⭪\n",
+      "⭫\n",
+      "⭬\n",
+      "⭭\n",
+      "⭮\n",
+      "⭯\n",
+      "⭰\n",
+      "⭱\n",
+      "⭲\n",
+      "⭳\n",
+      "⭴\n",
+      "⭵\n",
+      "⭶\n",
+      "⭷\n",
+      "⭸\n",
+      "⭹\n",
+      "⭺\n",
+      "⭻\n",
+      "⭼\n",
+      "⭽\n",
+      "⭾\n",
+      "⭿\n",
+      "⮀\n",
+      "⮁\n",
+      "⮂\n",
+      "⮃\n",
+      "⮄\n",
+      "⮅\n",
+      "⮆\n",
+      "⮇\n",
+      "⮈\n",
+      "⮉\n",
+      "⮊\n",
+      "⮋\n",
+      "⮌\n",
+      "⮍\n",
+      "⮎\n",
+      "⮏\n",
+      "⮐\n",
+      "⮑\n",
+      "⮒\n",
+      "⮓\n",
+      "⮔\n",
+      "⮕\n",
+      "⮖\n",
+      "⮗\n",
+      "⮘\n",
+      "⮙\n",
+      "⮚\n",
+      "⮛\n",
+      "⮜\n",
+      "⮝\n",
+      "⮞\n",
+      "⮟\n",
+      "⮠\n",
+      "⮡\n",
+      "⮢\n",
+      "⮣\n",
+      "⮤\n",
+      "⮥\n",
+      "⮦\n",
+      "⮧\n",
+      "⮨\n",
+      "⮩\n",
+      "⮪\n",
+      "⮫\n",
+      "⮬\n",
+      "⮭\n",
+      "⮮\n",
+      "⮯\n",
+      "⮰\n",
+      "⮱\n",
+      "⮲\n",
+      "⮳\n",
+      "⮴\n",
+      "⮵\n",
+      "⮶\n",
+      "⮷\n",
+      "⮸\n",
+      "⮹\n",
+      "⮺\n",
+      "⮻\n",
+      "⮼\n",
+      "⮽\n",
+      "⮾\n",
+      "⮿\n",
+      "⯀\n",
+      "⯁\n",
+      "⯂\n",
+      "⯃\n",
+      "⯄\n",
+      "⯅\n",
+      "⯆\n",
+      "⯇\n",
+      "⯈\n",
+      "⯉\n",
+      "⯊\n",
+      "⯋\n",
+      "⯌\n",
+      "⯍\n",
+      "⯎\n",
+      "⯏\n",
+      "⯐\n",
+      "⯑\n",
+      "⯒\n",
+      "⯓\n",
+      "⯔\n",
+      "⯕\n",
+      "⯖\n",
+      "⯗\n",
+      "⯘\n",
+      "⯙\n",
+      "⯚\n",
+      "⯛\n",
+      "⯜\n",
+      "⯝\n",
+      "⯞\n",
+      "⯟\n",
+      "⯠\n",
+      "⯡\n",
+      "⯢\n",
+      "⯣\n",
+      "⯤\n",
+      "⯥\n",
+      "⯦\n",
+      "⯧\n",
+      "⯨\n",
+      "⯩\n",
+      "⯪\n",
+      "⯫\n",
+      "⯬\n",
+      "⯭\n",
+      "⯮\n",
+      "⯯\n",
+      "⯰\n",
+      "⯱\n",
+      "⯲\n",
+      "⯳\n",
+      "⯴\n",
+      "⯵\n",
+      "⯶\n",
+      "⯷\n",
+      "⯸\n",
+      "⯹\n",
+      "⯺\n",
+      "⯻\n",
+      "⯼\n",
+      "⯽\n",
+      "⯾\n",
+      "⯿\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in unicode_data:\n",
+    "    print(chr(int(i, 16)))"
    ]
   },
   {
